Documentation edits made through Mintlify web editor

--- a/jp/getting-started/admin-invite.mdx
+++ b/jp/getting-started/admin-invite.mdx
@@ -1,5 +1,5 @@
 ---
-title: "管理者として招待されたら（admin-invite）"
+title: "管理者として招待されたら"
 description: "法人契約の管理者としてRakulogに招待されたときの初期セットアップ手順（招待の承諾、アカウント作成、初回ログイン、メンバー招待、初回アップロード、編集の基本）。"
 ---
 
@@ -70,14 +70,7 @@ Rakulog を管理者として利用開始するためのステップガイドで
 
 はじめに 1 本、**会議録音や動画**などをアップロードして処理の流れを確認しましょう。
 
-- **Web版**：**［アップロード］** ボタンからファイルを選択
-- **モバイル**：端末に保存された音声／動画を選択
-- **バルクアップロード**：複数ファイルを一括で投入可能
-
-> ベストプラクティス
->
-> - 長時間ファイルは分割すると安定して処理できます。
-> - 推奨形式（例：m4a, mp4 等）を利用すると変換がスムーズです。
+![scrnli_28GG2K77xxMGX5.png](/images/scrnli_28GG2K77xxMGX5.png)
 
 関連：[**PCでのアップロード**](/jp/transcription/upload-web)、[**複数ファイルの一括アップロード**](/jp/transcription/bulk-upload)
 
