Documentation edits made through Mintlify web editor

--- a/jp/getting-started/admin-invite.mdx
+++ b/jp/getting-started/admin-invite.mdx
@@ -20,7 +20,7 @@ Rakulog を管理者として利用開始するためのステップガイドで
 - 迷惑メールフォルダに入っていないか確認してください。
 - 社内で受信制限（ドメイン／URLフィルタ）がある場合、IT管理部門に許可設定を依頼してください。
 
-![Invite Email Pn](/images/invite-email.png)
+![Invite Email Pn](/jp/images/getting-started/admin-invite/invite-email.png)
 
 ---
 
@@ -33,7 +33,7 @@ Rakulog を管理者として利用開始するためのステップガイドで
 - **パスワード**（規定の強度ポリシーに従って設定）
 - 会社名（トライアル開始時の場合のみ初回に登録します）
 
-![Create Account Pn](/images/jp/getting-started/admin-invite/create-account.png)
+![Create Account Pn](/jp/images/getting-started/create-account.png)
 
 ---
 
