Documentation edits made through Mintlify web editor

--- a/jp/getting-started/admin-invite.mdx
+++ b/jp/getting-started/admin-invite.mdx
@@ -70,7 +70,7 @@ Rakulog を管理者として利用開始するためのステップガイドで
 
 はじめに 1 本、**会議録音や動画**などをアップロードして処理の流れを確認しましょう。
 
-![scrnli_28GG2K77xxMGX5.png](/images/scrnli_28GG2K77xxMGX5.png)
+![Upload Pn](/jp/images/home/upload.png)
 
 関連：[**PCでのアップロード**](/jp/transcription/upload-web)、[**複数ファイルの一括アップロード**](/jp/transcription/bulk-upload)
 
@@ -95,20 +95,16 @@ Rakulog を管理者として利用開始するためのステップガイドで
 ## さらに：導入初日にやっておくと便利な設定（任意）
 
 - **カレンダー連携（Google / Outlook）**：会議予定に基づく自動録音・文字起こし
-- **カスタム辞書**：社内用語や製品名を登録して精度向上
-- **要約設定**：自動要約のタイミングとテンプレート
-- **セキュリティ**：SSO、有効ドメイン制限、社外共有の既定ルール
-- **利用状況の確認**：明細・ログ・ストレージ消費の把握
 
 関連：\
-[**カレンダー連携**](/jp/meetings/calendar-connection)／[**辞書の登録**](/jp/admin/custom-dictionary)／[**要約テンプレート**](/jp/ai/custom-summary-templates)／[**セキュリティ設定**](/jp/security/overview)
+[**カレンダー連携**](/jp/meetings/calendar-connection)
 
 ---
 
 ## トラブルシューティング
 
 - **招待メールが届かない**：迷惑メール／社内セキュリティ設定を確認の上、再送を依頼
-- **ログインできない**：メールアドレスの相違、パスワードリセット、またはSSO設定を確認
+- **ログインできない**：メールアドレスの相違、パスワードリセット
 - **処理が進まない**：ファイル形式・サイズ、ネットワーク、再アップロードを試行
 
 > 詳細：[**ログインできないとき**](/jp/faq/cannot-login)、[**精度を上げる方法**](/jp/faq/improve-accuracy)
