Documentation edits made through Mintlify web editor

--- a/jp/getting-started/admin-invite.mdx
+++ b/jp/getting-started/admin-invite.mdx
@@ -1,12 +1,9 @@
 ---
 title: "管理者として招待されたら"
-description: "法人契約の管理者としてRakulogに招待されたときの初期セットアップ手順（招待の承諾、アカウント作成、初回ログイン、メンバー招待、初回アップロード、編集の基本）。"
+description: "Rakulog を管理者として利用開始するためのステップガイドです。\
+受信した「管理者招待メール」から登録を完了し、チーム運用をすぐに始められます。"
 ---
 
-Rakulog を管理者として利用開始するためのステップガイドです。\
-受信した「管理者招待メール」から登録を完了し、チーム運用をすぐに始められます。
-
----
 
 ## Step 1｜招待メールを確認する
 
