Documentation edits made through Mintlify web editor

--- a/jp/getting-started/member-invite.mdx
+++ b/jp/getting-started/member-invite.mdx
@@ -10,16 +10,15 @@ description: "管理者から Rakulog のメンバーに招待された方向け
 ## Step 1｜招待メールを確認する
 
 - Rakulog から届く **「メンバーとして参加する」** 招待メールを開き、本文の **「招待を承諾する」** をクリックします。
-- 迷惑メールフォルダや受信制限（社内セキュリティ設定）もご確認ください。リンクが無効な場合は、管理者に再発行を依頼してください。\
-  画像サンプル: /images/jp/getting-started/member-invite/invite-email.png
+- 迷惑メールフォルダや受信制限（社内セキュリティ設定）もご確認ください。リンクが無効な場合は、管理者に再発行を依頼してください。
+
+![Invite Email Pn](/jp/images/getting-started/admin-invite/invite-email.png)
 
 ---
 
 ## Step 2｜アカウントを作成する（初回のみ）
 
-招待リンクから初回登録画面に進み、**「姓／名」** と **「パスワード」** を入力して **「アカウントを作成」** をクリックします。\
-SSO（SAML / Google / Microsoft など）が有効な組織では、貴社のログイン方式に従ってサインインしてください。\
-画像サンプル: /images/jp/getting-started/member-invite/create-account.png
+招待リンクから初回登録画面に進み、**「姓／名」** と **「パスワード」** を入力して **「アカウントを作成」** をクリックします。
 
 ![Create Account Pn](/jp/images/getting-started/create-account.png)
 
@@ -27,8 +26,9 @@ SSO（SAML / Google / Microsoft など）が有効な組織では、貴社のロ
 
 ## Step 3｜初回ログイン
 
-登録完了後、そのまま **Rakulog にログイン** できます。次回以降は、設定済みの認証方式（メール＋パスワードや SSO など）でサインインしてください。\
-画像サンプル: /images/jp/getting-started/member-invite/first-login.png
+登録完了後、そのまま **Rakulog にログイン** できます。
+
+![First Login Pn](/jp/images/getting-started/admin-invite/first-login.png)
 
 ---
 
@@ -36,14 +36,11 @@ SSO（SAML / Google / Microsoft など）が有効な組織では、貴社のロ
 
 議事録化したい **音声／動画／会議録画** を 1 本アップロードして処理の流れを確認しましょう。
 
-- **PC から**：[/jp/transcription/upload-web](/jp/transcription/upload-web)
-- **複数まとめて**：[/jp/transcription/bulk-upload](/jp/transcription/bulk-upload)
-
 > ベストプラクティス\
 > ・長尺は可能なら分割してアップロードすると安定します。\
 > ・推奨形式（例：m4a, mp4 等）を利用すると変換がスムーズです。
 
-画像サンプル: /images/jp/transcription/upload-web.png
+![Upload Pn](/jp/images/home/upload.png)
 
 ---
 
@@ -80,9 +77,9 @@ SSO（SAML / Google / Microsoft など）が有効な組織では、貴社のロ
 - **ログインできない**：SSO の権限付与やメールアドレスを確認 → [/jp/faq/cannot-login](/jp/faq/cannot-login)
 - **アップロードに失敗する**：対応拡張子・サイズ上限・ネットワーク制限を確認 → [/jp/faq/limits](/jp/faq/limits)
 
----
+<!-- ---
 
 ## 関連ページ
 
 - **管理者として招待されたら**：[/jp/getting-started/admin-invite](/jp/getting-started/admin-invite)
-- **メンバーの招待・管理（管理者向け）**：[/jp/team/invite-remove](/jp/team/invite-remove)
+- **メンバーの招待・管理（管理者向け）**：[/jp/team/invite-remove](/jp/team/invite-remove) -->
