Documentation edits made through Mintlify web editor

--- a/jp/getting-started/member-invite.mdx
+++ b/jp/getting-started/member-invite.mdx
@@ -77,9 +77,9 @@ description: "管理者から Rakulog のメンバーに招待された方向け
 - **ログインできない**：SSO の権限付与やメールアドレスを確認 → [/jp/faq/cannot-login](/jp/faq/cannot-login)
 - **アップロードに失敗する**：対応拡張子・サイズ上限・ネットワーク制限を確認 → [/jp/faq/limits](/jp/faq/limits)
 
-<!-- ---
+---
 
 ## 関連ページ
 
 - **管理者として招待されたら**：[/jp/getting-started/admin-invite](/jp/getting-started/admin-invite)
-- **メンバーの招待・管理（管理者向け）**：[/jp/team/invite-remove](/jp/team/invite-remove) -->
+- **メンバーの招待・管理（管理者向け）**：[/jp/team/invite-remove](/jp/team/invite-remove)
