Documentation edits made through Mintlify web editor

--- a/jp/getting-started/member-invite.mdx
+++ b/jp/getting-started/member-invite.mdx
@@ -52,6 +52,8 @@ description: "管理者から Rakulog のメンバーに招待された方向け
 - **話者**：話者名の割り当て・一括設定
 - **共有**：ノート共有、コメント、データのダウンロード
 
+![Meeting Minutes Pn](/jp/images/meeting/meeting-minutes.png)
+
 関連ドキュメント：
 
 - 編集の基本 → [/jp/editing/edit-transcript](/jp/editing/edit-transcript)
