Documentation edits made through Mintlify web editor

--- a/jp/getting-started/google-calendar-integration.mdx
+++ b/jp/getting-started/google-calendar-integration.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Google カレンダー連携手順"
+description: "RakulogでGoogleカレンダーを連携する手順を、初回/再連携の流れと注意点（権限チェック漏れで予定が表示されない原因）を含めて解説します。」"
 ---
 
 # Google カレンダー連携手順
